Fixed sidebar alignment issue

--- a/src/frontend/containers/HomePage/styles.scss
+++ b/src/frontend/containers/HomePage/styles.scss
@@ -1,8 +1,10 @@
 @charset "UTF-8";
 
 .homePage {
+  display:flex;
   .Content {
-      margin-left: 108px;
-      margin-top: 36px;
+    flex: 1;
+    margin-left: 108px;
+    margin-top: 24px;
   }
 }
