--- a/src/frontend/containers/RegisterPage/styles.scss
+++ b/src/frontend/containers/RegisterPage/styles.scss
@@ -2,7 +2,8 @@
 
 .registerPage {
   .Content {
-      margin-top: 36px;
+      margin-top: 24px;
+      margin-left: 24px;
   }
 
   .Footer {
