--- a/src/frontend/containers/WorkspacePage/styles.scss
+++ b/src/frontend/containers/WorkspacePage/styles.scss
@@ -1,9 +1,11 @@
 @charset "UTF-8";
 
 .workspacePage {
+  display:flex;
   .Content {
-      margin-left: 108px;
-      margin-top: 36px;
+    flex: 1;
+    margin-left: 108px;
+    margin-top: 24px;
   }
   .Total {
       column-count: 2;
